cambiato font, service work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
-            .register("/cmr/service-worker.js")
+            .register("/service-worker.js")
             .then(reg => {
               console.log("Service worker registered.", reg);
             });
@@ -26,18 +26,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>Cheat Meal Roulette</h1>
+      <h1>Cheat Sweet Roulette</h1>
       <div class="animated roulette-container">
         <a class="link-to" href="" target="_blank"><span class="roulette"></span></a class="link-to">
       </div>
-      <button class="spin">I'm feeling lucky</button>
-      <footer>Developed with ❤️ by Manuel</footer>
+      <button class="spin">Voglia di dolce?</button>
+      <footer>Developed with ❤️ by Valentina</footer>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"
-    >
-      </script>
     <script src="js/roulette.js"></script>
   </body>
 </html>
